<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">全家康</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="crop__wait" translatable="false">Please wait…</string>
    <string name="crop__saving" translatable="false">Saving picture…</string>
    <string name="crop__pick_error" translatable="false">No image sources available</string>
    <string name="crop__done" translatable="false">确认</string>
    <string name="crop__cancel" tools:ignore="ButtonCase" translatable="false">取消</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="login_title">登录</string>
    <string name="signup_title">注册</string>
    <string name="signup_phone">请输入手机号码</string>
    <string name="signup_checkcode">请输入验证码</string>
    <string name="signup_checkcode_get">获取验证码</string>
    <string name="singup_clause_text">我已阅读并同意《注册条款》</string>
    <string name="singup_clause_text1">我已阅读并同意</string>
    <string name="singup_clause_text2">《注册条款》</string>
    <string name="singup_clause_hint">请阅读并同意《注册条款》!</string>
    <string name="signup_password">请输入密码</string>
    <string name="signup_name">请输入个性昵称</string>
    <string name="signup_password_reinput">请再次确认密码</string>
    <string name="signup_error">注册失败，请重试!</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_password_new">请输入新密码</string>
    <string name="reset_password_recheck">请再次确认新密码</string>
    <string name="reset_password_comfirm">确认</string>
    <string name="main_title">首页</string>
    <string name="next">下一步</string>
    <string name="submit">提  交</string>
    <string name="view_pager_string1_professer">同城名医</string>
    <string name="view_pager_string2_doctors">免费问诊</string>
    <string name="view_pager_string3_yao">易善服务</string>
    <string name="view_pager_string4_familyservice">家政护理</string>
    <string name="view_pager_string5_yigong">爱心义工</string>
    <string name="view_pager_string6">名医咨询</string>
    <string name="view_pager_string7">名医咨询</string>
    <string name="view_pager_string8">名医咨询</string>
    <string name="state_item_string1">计步</string>
    <string name="state_item_string1_value">100/min</string>
    <string name="state_item_string2">(电量)</string>
    <string name="state_item_string3">信号</string>
    <string name="state_item_string4">病历</string>
    <string name="state_item_string3_good">良好</string>
    <string name="state_item_string3_well">一般</string>
    <string name="state_item_string3_bad">差</string>
    <string name="state_item_string5_pulse">脉搏</string>
    <string name="state_item_locating">定位</string>
    <string name="bind_device_id">ID:</string>
    <string name="bind_device_hind">请输入ID账号</string>
    <string name="bind_device_scan">扫描二维码获取</string>
    <string name="bind_device_name">名字:</string>
    <string name="bind_device_name_hind">请输入名字</string>
    <string name="bind_device_hint">请扫描智能手表包装盒上的二维\n码进行设备绑定</string>
    <string name="descr_image">Image</string>
    <string name="name">名字</string>
    <string name="clinic">科室名</string>
    <string name="hospital">医院名</string>
    <string name="field">领域</string>
    <string name="nick_name">外号</string>
    <string name="rank_name">职称</string>
    <string name="commant_number">评论数</string>
    <string name="evaluate">评价</string>
    <string name="phone_docter">儿童医生</string>
    <string name="phone_docter_function">寻医问药</string>
    <string name="phone_docter_command1">真正专家</string>
    <string name="phone_docter_command2">绝对隐私</string>
    <string name="phone_docter_command3">更方便、更轻松</string>
    <string name="phone_docter_command4">服务费用:199/年</string>
    <string name="phone_docter_command5">马上申请通话</string>
    <string name="phone_docter_desc">\t提供电话咨询服务的医生全部经过三甲医院认证，职称为中级以上，业务能力在专业领域内权威。\n1.绝对隐私\n\t您的资料信息只有专家可以审阅详情，一对一电话沟通，确保您的个人隐私安全性。\n2.更方便，更轻松\n\t足不出户就可以享受权威专家的沟通业务，在自己隐秘的空间，不受任何人的打扰，轻松地与专家交流病情。</string>
    <string name="login_account">账号:</string>
    <string name="login_account_hint">请输入手机号码</string>
    <string name="login_account_hint_doctor">手机</string>
    <string name="login_password">密码:</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_hint_doctor">密码</string>
    <string name="common_hint_null_return_value">服务器无响应，请重试!</string>
    <string name="common_hint_login_error">登录失败，请输入正确的用户名和密码!</string>
    <string name="common_hint_serial_error">数据格式异常!</string>
    <string name="common_hint_login_im_server_error">聊天服务器登录失败!</string>
    <string name="common_hint_login_params_error">请填写用户名和密码</string>
    <string name="common_add">添加</string>
    <string name="common_delete">删除</string>
    <string name="common_cancel">取消</string>
    <string name="common_confirm">确定</string>
    <string name="common_save">保存</string>
    <string name="common_error_voice">0\"</string>
    <string name="setting_entry_my_orders">我的订单</string>
    <string name="setting_entry_my_reserve">我的预约</string>
    <string name="setting_entry_my_consult">我的咨询</string>
    <string name="setting_entry_my_insure">我的保险</string>
    <string name="setting_entry_bind_devices">绑定设备</string>
    <string name="setting_entry_volunteer">义工消息</string>
    <string name="setting_entry_missing">寻人启事</string>
    <string name="setting_entry_health">健康档案</string>
    <string name="setting_entry_scene_setting">情景设置</string>
    <string name="setting_entry_family_number">亲情号码</string>
    <string name="setting_entry_about_us">关于我们</string>
    <string name="setting_entry_more">更多设置</string>
    <string name="setting_entry_ebean">我的E豆</string>
    <string name="setting_entry_level">礼物记录</string>
    <string name="setting_entry_level1">礼物账单</string>
    <string name="setting_password_modify">修改密码</string>
    <string name="setting_password_origin">请输入原始密码</string>
    <string name="setting_password_origin_error">原始密码输入错误!</string>
    <string name="setting_password_new">请输入新密码</string>
    <string name="setting_password_check">请再次确认新密码</string>
    <string name="setting_password_check1">请填写必填信息</string>
    <string name="setting_password_check2">新密码不一致</string>
    <string name="setting_password_check21">密码长度小于6位</string>
    <string name="setting_password_check22">密码长度大于15位</string>
    <string name="setting_password_check3">修改密码成功</string>
    <string name="setting_password_check31">修改密码成功，请重新登录</string>
    <string name="setting_password_check4">修改密码失败</string>
    <string name="setting_password_check5">密码需要包含字母、数字、或英文符号中至少两种,长度限制6~15位</string>
    <string name="setting_password_check6">请输入手机号</string>
    <string name="setting_password_check7">请输入正确的手机号</string>
    <string name="setting_password_check8">请输入验证码</string>
    <string name="setting_password_check9">验证码错误</string>
    <string name="setting_password_check10">手机号码与获取验证码的手机号码不一致</string>
    <string name="setting_password_check11">密码不一致</string>
    <string name="setting_password_check12">请输入密码</string>
    <string name="setting_password_check13">新密码与原密码一致,请重新输入新密码</string>
    <string name="setting_password_check14">请输入用户姓名</string>
    <string name="setting_more_perfect">完善资料</string>
    <string name="setting_more_pw_modify">修改密码</string>
    <string name="setting_more_withdrawpw_modify">提现管理</string>
    <string name="setting_more_address">收货地址</string>
    <string name="setting_more_react">用户反馈</string>
    <string name="setting_more_version">当前版本</string>
    <string name="setting_more_exit">退出登录</string>
    <string name="setting_more_exit1">退出</string>
    <string name="add_address_receiver">收货人:</string>
    <string name="add_address_mobile">手机号码:</string>
    <string name="add_address_mobile_hint">请输入联系电话:</string>
    <string name="add_address_city">所在地区:</string>
    <string name="add_address_detail">详细地址:</string>
    <string name="add_address_detail_hint">请输入详细地址:</string>
    <string name="receive_address">收货地址</string>
    <string name="receive_address_add">新建地址</string>
    <string name="receive_address_double_space">  </string>
    <string name="error_server_interface">服务器接口异常!</string>
    <string name="error_net">网络异常!</string>
    <string name="about_us">可穿戴智能健康及看护系统\n</string>
    <string name="about_communicate">020-81772777</string>
    <string name="contact_add">已添加</string>
    <string name="contact_unadd">添加</string>
    <string name="bind_device_input_id">ID:</string>
    <string name="bind_device_input_id_hint">请输入ID账号</string>
    <string name="bind_device_input_name">名字:</string>
    <string name="bind_device_input_name_hint">请输入名字</string>
    <string name="bind_device_input_scan_2dcode">扫描二维码获取</string>
    <string name="bind_device_input_image_hint">请上传头像</string>
    <string name="main_index_family_member">我的家人</string>
    <string name="signup_rules">\t\t全家康平台(下称“本平台”)刊载的所有内容(包括但不限于文字、图片、声音、录像、图表、标志、标识、域名、程序、版面设计、专栏目录与名称)的知识产权均属本平台或相关权利人所有。未经本平台和作者共同同意，其他任何个人或机构不得以任何形式侵犯其作品版权，包括但不限于：擅自复制、链接、非法使用或转载，或以任何方式建立作品镜像。本平台将保留权利终止任何被发现利用本平台侵犯版权或他人知识产权的用户的使用。
\n\n\t\t<b>版权保护</b>

\n\n\t\t凡本平台注明“来源：全健康”的所有作品，著作权均属本平台所有，转载必须注明“来源：全健康”。

\n\n\t\t本平台部分资料为网上搜集转载，均尽力标明作者和出处。对于本网刊载作品涉及著作权等问题的，请与本平台联系，本平台核实后给予处理。
\n\n\t\t<b>免责条款</b>

\n\n\t\t本平台转载之作品仅供阅读参考，如其他媒体、平台或个人转载使用，请与著作权人联系，并自负法律责任，本平台不承担任何相关责任。

\n\n\t\t本平台各类作品均出于为公众传播有益的信息之目的，并不意味着赞同其观点或证实其内容的真实性，本平台不对其科学性、严肃性等作任何形式的保证，仅代表作者本人的观点，不代表本平台的观点和看法，与本平台立场无关，因其使用本平台网络服务而产生的一切后果由用户自己承担，本平台不承担任何相关责任。

\n\n\t\t本平台所刊载的各类形式(包括但不限于文字、图片、图表)的作品仅供参考使用，并不代表本平台同意其说法或描述。对于用户根据本平台提供的信息所做出的一切行为，除非另有明确的书面承诺文件，否则本平台不承担任何形式的责任。

\n\n\t\t本声明未涉及的问题请参见国家有关法律法规，当本声明与国家有关法律法规冲突时，以国家法律法规为准。

\n\n\t\t本平台相关声明版权及其修改权、更新权和最终解释权均属APP手机APP所有。 </string>
    <string name="signup_card_rules">\t\t全家康-银行卡快捷签约协议（以下简称“本协议”）是广州市巨硅信息科技有限公司全家康智慧养老系统（以下简称“全家康”）与全家康用户(以下简称“您”)就“银行卡快捷签约服务”（以下简称“本服务”）的使用等相关事项所订立的有效合约。

\n\n\t\t您通过网络页面点击确认或以其他方式选择接受本协议，即表示您与全家康已达成协议并同意接受本协议的全部约定内容。在接受本协议之前，请您仔细阅读本协议的全部内容（特别是以粗体下划线标注的内容）。如果您不同意本协议的任意内容，请不要进行后续操作。

\n\n\t\t全家康-银行卡快捷签约协议（以下简称“本协议”）是广州市巨硅信息科技有限公司全家康智慧养老系统（以下简称“全家康”）与全家康用户(以下简称“您”)就“银行卡快捷签约服务”（以下简称“本服务”）的使用等相关事项所订立的有效合约。

\n\n\t\t您通过网络页面点击确认或以其他方式选择接受本协议，即表示您与全家康已达成协议并同意接受本协议的全部约定内容。在接受本协议之前，请您仔细阅读本协议的全部内容（特别是以粗体下划线标注的内容）。如果您不同意本协议的任意内容，请不要进行后续操作。

\n\n\t\t<b>“快捷签约服务”</b>指通过本服务，您同意将银行卡与您登录的全家康账户进行绑定，以便您此次及今后可以通过全家康及\或第三方传输您的支付指令从您的银行卡账户中扣除有关款项给收款方。

\n\n\t\t<b><u>您应确保您在开通和使用本服务时绑定的银行卡为您本人所有，并确保您将您的全家康账户与该银行卡绑定且用其支付的行为合法、有效，未侵犯任何第三方合法权益；否则因此造成全家康及其关联公司、持卡人损失的，您应负责赔偿并承担全部法律责任，全家康有权采取合理措施减轻该损失，包括但不限于冻结您的全家康账户及资金、从您的全家康账户扣除相应的款项等。</u></b>

\n\n\t\t您同意全家康收集您在使用本服务过程中所填写的包括但不限于姓名、银行卡卡号、手机号码、证件号码、证件类型、有效期等信息并有权自己或者委托第三方将上述信息发送至您的发卡银行进行验证，验证通过后，全家康就可以为您开通本服务。同时，发卡行与全家康保留随时变更上述确认要素作为校验标准的权利。

\n\n\t\t您应妥善保管银行卡和全家康账号信息，包括但不限于银行卡卡号、密码、有效期，全家康账号、密码、密保信息、手机校验码等信息。如您遗失银行卡、泄露全家康账户密码或相关信息的，您应及时通知发卡行及/或全家康，以减少可能发生的损失。因泄露上述银行卡信息、全家康账号信息、丢失银行卡等所致损失需由您自行承担。

\n\n\t\t您同意，本协议适用中华人民共和国大陆地区法律。因全家康与您就本协议的签订、履行或解释发生争议，双方应努力友好协商解决。如协商不成，全家康和您同意由广州市荔湾区人民法院管辖审理双方的纠纷或争议。

\n\n\t\t本协议内容包括协议正文及所有全家康已经发布的或将来可能发布的全家康服务的使用规则。所有规则为本协议不可分割的一部分，与协议正文具有相同法律效力。若您在本协议内容发生修订后，继续使用本服务的，则视为您同意最新修订的协议内容；否则您须立即停止使用本服务。

\n\n\t\t本协议未尽事宜，您需遵守全家康网站上公布的《全家康服务协议》及相关规则。
    </string>
</resources>