<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    >
    <include 
        android:id="@+id/layout_title"
        layout="@layout/layout_title_doctor"
        />
    
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_title"
        android:layout_above="@+id/tv_book"
        >
        
    	<LinearLayout 
    	    android:id="@+id/layout_container"
    	    android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:orientation="vertical"
    	    android:background="@color/main_bg_color"
    	    >
	
		<RelativeLayout 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="@dimen/size_12"
		    android:paddingBottom="@dimen/size_18"
		    android:background="@color/white"
		    >
		    
		    <ImageView 
		        android:id="@+id/image"
		        android:layout_width="@dimen/height_80"
		        android:layout_height="@dimen/height_80"
		        android:layout_marginLeft="8dp"
				android:src="@drawable/ic_launcher"
		        />
		    
		    <TextView
		        android:id="@+id/tv_name"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:singleLine="true"
		        android:textColor="@color/hei222" 
		        android:textSize="@dimen/font_16"
		        android:layout_toRightOf="@+id/image"		        
		        android:layout_marginLeft="@dimen/size_8"
				android:text="@string/name"
		        />

			<TextView
				android:id="@+id/tv_nick_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/holo_blue_light"
				android:layout_toRightOf="@+id/tv_name"
				android:textSize="@dimen/font_14"
				android:layout_marginLeft="@dimen/size_8"
				android:text="@string/nick_name"
				android:paddingLeft="@dimen/margin_10"
				android:paddingRight="@dimen/margin_10"
				android:paddingTop="@dimen/size_2"
				android:paddingBottom="@dimen/size_2"
				android:background="@drawable/selecter_hollow_blue"
				/>
		
		    <TextView
		        android:id="@+id/tv_clinic_title"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/qianhei"
				android:layout_below="@+id/tv_name"
				android:layout_alignLeft="@+id/tv_name"
		        android:textSize="@dimen/font_14"
				android:layout_marginTop="@dimen/size_8"
				android:text="@string/clinic"
		        />

			<TextView
				android:id="@+id/tv_rank_name"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/qianhei"
				android:layout_toRightOf="@id/tv_clinic_title"
				android:layout_alignTop="@id/tv_clinic_title"
				android:textSize="@dimen/font_14"
				android:layout_marginLeft="@dimen/size_8"
				android:text="@string/rank_name"
				/>
		
		    <TextView 
		        android:id="@+id/hospital"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/hei"
		        android:textSize="@dimen/font_14"
				android:layout_toRightOf="@id/tv_rank_name"
				android:layout_alignTop="@id/tv_rank_name"
				android:text="@string/hospital"
				android:layout_marginLeft="@dimen/size_8"
		        />

			<RatingBar
				android:id="@+id/rbar"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@+id/tv_clinic_title"
				android:layout_alignLeft="@+id/tv_clinic_title"
				android:layout_marginTop="@dimen/size_10"
				android:numStars="5"
				style="@style/roomRatingBar"
				/>

			<TextView
				android:id="@+id/tv_commant"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/qianhei"
				android:layout_toRightOf="@id/rbar"
				android:layout_alignTop="@id/rbar"
				android:textSize="@dimen/font_14"
				android:layout_marginLeft="@dimen/size_8"
				android:text="@string/commant_number"
				/>
		    
		    <TextView 
		        android:id="@+id/tv_good_at"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@color/qianhei"
		        android:textSize="@dimen/font_14"
		        android:layout_below="@+id/rbar"
		        android:layout_alignLeft="@+id/rbar"
		        android:layout_marginTop="@dimen/size_8"
				android:text="@string/field"
		        />
		    
		</RelativeLayout>
		
		<RelativeLayout 
		    android:id="@+id/layout_desc"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@color/white"
		    android:layout_marginTop="@dimen/size_12"
		    >
		    <TextView 
		        android:id="@+id/tv_mark"
		        android:layout_width="@dimen/size_4"
		        android:layout_height="@dimen/size_18"
		        android:background="@color/holo_blue_light"
		        android:layout_marginTop="@dimen/size_6"
		        android:layout_marginBottom="@dimen/size_6"
		        />
		    
		    <TextView 
		        android:id="@+id/tv_jieshao"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/size_6"
		        android:layout_marginBottom="@dimen/size_6"
		        android:text="介绍"
		        android:layout_toRightOf="@+id/tv_mark"
		        android:layout_marginLeft="@dimen/size_16"
		        android:textColor="@color/hei55"
		        android:textSize="@dimen/font_14"
		        />
		    
		    <TextView 
		        android:id="@+id/tv_line"
		        android:layout_width="match_parent"
		        android:layout_height="@dimen/size_1"
		        android:background="@color/fengexian"
		        android:layout_marginTop="@dimen/size_4"
		        android:layout_marginLeft="@dimen/size_12"
		        android:layout_marginRight="@dimen/size_12"
		        android:layout_below="@+id/tv_mark"
		        />	
		        
		    <TextView 
		        android:id="@+id/tv_content"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="@dimen/size_10"
		        android:layout_marginBottom="@dimen/size_10"
		        android:layout_marginLeft="@dimen/size_20"
		        android:layout_marginRight="@dimen/size_20"
		        android:textColor="@color/qianhei"
		        android:textSize="@dimen/font_14"
		        android:layout_below="@+id/tv_line"
		        android:lineSpacingExtra="@dimen/size_6"
				android:text="111111111111111111111111111111111111111111111111111111111111111111111111111111111111111111"
		        />
		    
		</RelativeLayout>
		</LinearLayout>
	</ScrollView>
	
</RelativeLayout>